--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -457,7 +457,9 @@ and the derived files
 %
 %    \begin{macrocode}
 
-\RequirePackage{luatextra}
+\RequirePackage{luatexbase}
+\RequirePackage{luatexbase-mcb}
+\RequirePackage{luatexbase-modutils}
 
 \luatexUseModule{luainputenc}
 
