--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -202,7 +202,7 @@ and the derived files
 % with an old engine, so you will still be able to compile your documents with
 % pdf\TeX\ without changing them.
 %
-% \pk{luainputenc} has several modes of operation. By default, is basically
+% \pf{luainputenc} has several modes of operation. By default, is basically
 % turns \LuaTeX\ into an 8-bit engine, which means you loose half of the
 % benefits from using \LuaTeX. If you are using only Unicode fonts, you can
 % activate a nicer mode of operation using the \code{unactivate} package
