--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
                      History of the luainputenc bundle
 
+2010/10/05, luainputenc v0.971:
+    * improved documentation
+    * no longer loading luatextra
+
 2010/05/11, luainputenc v0.97:
     * adapting to the new luatexbase system
 
