--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -185,7 +185,7 @@ and the derived files
 % This package is strictly meant for compatibility. It is usefull in the two
 % (overlapping) following cases:
 % \begin{enumerate}
-% \item You source is not encoded in UTF-8 and you don't want to reencode it
+% \item Your source is not encoded in UTF-8 and you don't want to reencode it
 % for some reason.
 % \item Your document is using legacy 8-bit fonts (with \pf{fontenc}), as
 % opposed to modern Unicode fonts (most probably with \pf{fontspec} or
@@ -202,7 +202,7 @@ and the derived files
 % with an old engine, so you will still be able to compile your documents with
 % pdf\TeX\ without changing them.
 %
-% \pf{luainputenc} has several modes of operation. By default, is basically
+% \pf{luainputenc} has several modes of operation. By default, it basically
 % turns \LuaTeX\ into an 8-bit engine, which means you loose half of the
 % benefits from using \LuaTeX. If you are using only Unicode fonts, you can
 % activate a nicer mode of operation using the \code{unactivate} package
