--- a/NEWS
+++ b/NEWS
@@ -1,21 +1,24 @@
-                     History of the luainputenc bundle
+                     History of the luainputenc package
 
-2010/10/05, luainputenc v0.971:
+2010/10/10 v0.972
+    * adapt to luatexbase 0.3
+
+2010/10/05 v0.971
     * improved documentation
     * no longer loading luatextra
     * fix bug under pdftex/xetex, thanks to Ulrike
 
-2010/05/11, luainputenc v0.97:
+2010/05/11 v0.97
     * adapting to the new luatexbase system
 
-2010/02/07, luainputenc v0.96:
+2010/02/07 v0.96
     * removing the files eu2enc.def and eu2lmr.fd from luainputenc, they
         can now be found in the euenc package.
     * creating luainputenc.package_option and luainputenc.encoding
 
-2009/11/28, luainputenc v0.95:
+2009/11/28 v0.95
     * fixing a bug with \endlinechar introduced in LuaTeX 0.43
 
-2009/09/23, luainputenc v0.95:
-    * adapting to the new callback process_output_buffer introduced in 
+2009/09/23 v0.95
+    * adapting to the new callback process_output_buffer introduced in
         LuaTeX v0.43.
