--- a/luainputenc.dtx
+++ b/luainputenc.dtx
@@ -121,7 +121,7 @@ and the derived files
 %<package>
 %<package>\NeedsTeXFormat{LaTeX2e}
 %<package>\ProvidesPackage{luainputenc}
-%<package>  [2010/10/05 v0.971 inputenc package for LuaTeX]
+%<package>  [2010/10/10 v0.972 inputenc package for LuaTeX]
 %<package>
 % \fi
 %<*driver>
@@ -165,7 +165,7 @@ and the derived files
 %   Right brace   \}     Tilde         \~}
 %
 % \title{The \textsf{luainputenc} package}
-% \date{2010/10/05 v0.971}
+% \date{2010/10/10 v0.972}
 % \author{%
 %   Manuel P\'egouri\'e-Gonnard \email{mpg@elzevir.fr} \\
 %   \'Elie Roux \email{elie.roux@telecom-bretagne.eu}}
@@ -458,10 +458,8 @@ and the derived files
 %    \begin{macrocode}
 
 \RequirePackage{luatexbase}
-\RequirePackage{luatexbase-mcb}
-\RequirePackage{luatexbase-modutils}
 
-\luatexUseModule{luainputenc}
+\RequireLuaModule{luainputenc}
 
 %    \end{macrocode}
 %
